# excel-dbapi

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCH.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW_ISSUES.md  CODE_REVIEW_SUMMARY_KR.md  CONTRIBUTING.md  ISSUE_TRACKING.md  Makefile  PRD.md  README.md  REVIEW_SUMMARY.txt  SECURITY.md  SUPPORT.md  TDD.md  cliff.toml  codecov.yml  docker-compose.dev.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_TEMPLATE.md  dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  release_checklist.md  task.yml
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
docs/: API_REFERENCE.md  BENCHMARKS.md  DEVELOPMENT.md  GRAPH_PRODUCTION.md  GROWTH_ROADMAP_2026.md  INDEX.md  OPERATIONS.md  PRD.md  PUBLIC_ROADMAP.md  QUICKSTART_10_MIN.md  README.md  ROADMAP.md  SQL_SPEC.md  TASKS.md  USAGE.md  VERSIONING.md  engines.md  graph-backend.md
examples/: advanced_query.py  basic_usage.py  pandas_engine.py  transactions.py  write_operations.py
examples/education/: lesson_01_first_query.py  lesson_02_parameter_binding.py
scripts/: bump_version.py  check_version_surfaces.py
src/excel_dbapi/: __init__.py  api.py  cli.py  connection.py  cursor.py  exceptions.py  executor.py  parser.py  query.py  reflection.py  sanitize.py
src/excel_dbapi/engine/: __init__.py  base.py  executor.py  openpyxl_engine.py  openpyxl_executor.py  pandas_engine.py  pandas_executor.py  parser.py  result.py
src/excel_dbapi/engines/: __init__.py  base.py  openpyxl_engine.py  registry.py  result.py
src/excel_dbapi/engines/graph/: __init__.py  auth.py  backend.py  client.py  locator.py  session.py
src/excel_dbapi/engines/openpyxl/: __init__.py  backend.py
src/excel_dbapi/engines/pandas/: __init__.py  backend.py
src/excel_dbapi/executor/: __init__.py  _functions.py  core.py
src/excel_dbapi/openpyxl/: __init__.py
src/excel_dbapi/parser/: __init__.py  _constants.py  compound.py  ddl.py  dml.py  expressions.py  select.py  tokenizer.py  validator.py  where.py
src/exceldb/: connection.py  cursor.py  remote.py  table.py
src/exceldb/engines/: openpyxl_engine.py
tests/: test_additional_coverage.py  test_alter_table.py  test_api_extensions.py  test_arithmetic.py  test_atomic_rollback_integration.py  test_backup.py  test_base_engine.py  test_case_when.py  test_cli.py  test_column_aliases.py  test_compound.py  test_connection.py  test_connection_graph.py  test_count_distinct.py  test_coverage_boost.py  test_coverage_boost_targeted.py  test_critical_fixes.py  test_cte.py  test_cursor.py  test_cursor_closed_error.py  test_ddl_quoted.py  test_ddl_trailing_comma.py  test_distinct_join.py  test_engine.py  test_engine_state.py  test_error_paths.py  test_exceptions.py  test_executemany_exceptions.py  test_executor.py  test_executor_coverage.py  test_exists_subqueries.py  test_file_locking.py  test_formula_injection.py  test_golden_ddl.py  test_golden_delete.py  test_golden_insert.py  test_golden_select.py  test_golden_update.py  test_graph_conflict_detection.py  test_graph_header_normalization.py  (+52 more)
tests/data/: sample.xlsx
tests/graph/: test_auth.py  test_backend.py  test_client.py  test_locator.py
