[build-system]
requires = [ "setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "excel-dbapi"
version = "1.0.0"
description = "PEP 249 compliant DB-API driver for Excel files"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
requires-python = ">=3.10"
keywords = ["excel", "db-api", "sql", "openpyxl", "pandas"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries",
]
dependencies = [ "pandas>=2.0.0,<3.0.0", "openpyxl>=3.1.0,<4.0.0",]
[[project.authors]]
name = "Yeongseon Choe"
email = "yeongseon.choe@gmail.com"

[project.urls]
Homepage = "https://github.com/yeongseon/excel-dbapi"
Repository = "https://github.com/yeongseon/excel-dbapi"
Issues = "https://github.com/yeongseon/excel-dbapi/issues"
Changelog = "https://github.com/yeongseon/excel-dbapi/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [ "pytest>=8.3.5,<9.0.0", "pytest-cov>=4.1,<5.0.0", "black>=25.1.0,<26.0.0", "isort>=6.0.1,<7.0.0", "ruff>=0.11.2,<0.12.0", "mypy>=1.15.0,<2.0.0", "build", "bandit>=1.7.0,<2.0.0", "vulture>=2.0,<3.0", "pre-commit", "types-requests>=2.28.0,<3.0.0",]

[tool.mypy]
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
pythonpath = [ "src",]

[tool.setuptools.packages.find]
where = [ "src",]
